force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/ucinn_ascendv2__Review_Transaction__c.object-meta.xml
<CustomObject>
    <description>Staging Table for Gifts/Pledge Payments coming from the interfaces that is subject for review.</description>
    <label>Review Transaction</label>
    <nameField>
        <label>Review Transaction ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>