force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Address_1_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1_Line_1__c</fullName>
    <label>Address 1 Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>