force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Beneficiary_1__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Review Transactions (Beneficiary 1)</relationshipLabel>
    <relationshipName>Review_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>