force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Beneficiary_2__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Review Transactions (Beneficiary 2)</relationshipLabel>
    <relationshipName>Review_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>