force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Campaign_Extension__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Extension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CA: 9/20/2019: - Phase 1: To be mapped to Opportunity</description>
    <label>Campaign Extension</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Review Transactions (Campaign Extension)</relationshipLabel>
    <relationshipName>Review_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>