force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Campaign_Extension_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Extension_Code__c</fullName>
    <description>CA: 9/20/2019: - Phase 1: To be used by trigger to update the Campaign Extension Lookup field</description>
    <label>Campaign Extension Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>