force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Cash_Surrendered_Value__c.field-meta.xml
<CustomField>
    <fullName>Cash_Surrendered_Value__c</fullName>
    <label>Cash Surrendered Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>