force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Document_Received__c.field-meta.xml
<CustomField>
    <fullName>Document_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>10/7/2019 CA: Document Received Flag for Pledges</description>
    <label>Document Received</label>
    <type>Checkbox</type>
</CustomField>