force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <description>[CA:9/17/2019] Added for use by review transaction handler</description>
    <label>EmailAddress</label>
    <type>Email</type>
</CustomField>