force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Exception_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reasons__c</fullName>
    <description>[CA:9/17/2019] Added for use by review transaction handler</description>
    <label>Exception_Reasons</label>
    <length>225</length>
    <type>Text</type>
</CustomField>