force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Gift_Comments__c.field-meta.xml
<CustomField>
    <fullName>Gift_Comments__c</fullName>
    <label>Gift Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>