force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>Gift_Type__c</fullName>
    <description>10/31/2019 CA: Added to map to Opportunity Type</description>
    <label>Gift Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>