force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <label>Instrument</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Instrument</valueSetName>
    </valueSet>
</CustomField>