force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Is_Anonymous__c.field-meta.xml
<CustomField>
    <fullName>Is_Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[CA:9/17/2019] Added for use by review transaction handler</description>
    <label>Is_Anonymous</label>
    <type>Checkbox</type>
</CustomField>