force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Is_Planned_Gift__c.field-meta.xml
<CustomField>
    <fullName>Is_Planned_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Planned Gift</label>
    <type>Checkbox</type>
</CustomField>