force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Is_Sustaining__c.field-meta.xml
<CustomField>
    <fullName>Is_Sustaining__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sustaining</label>
    <type>Checkbox</type>
</CustomField>