force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Is_Third_Party_Pledge__c.field-meta.xml
<CustomField>
    <fullName>Is_Third_Party_Pledge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Third Party Pledge</label>
    <type>Checkbox</type>
</CustomField>