force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Is_Trustee__c.field-meta.xml
<CustomField>
    <fullName>Is_Trustee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Trustee</label>
    <type>Checkbox</type>
</CustomField>