force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Manual_Installment_Flag__c.field-meta.xml
<CustomField>
    <fullName>Manual_Installment_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Installment Flag</label>
    <type>Checkbox</type>
</CustomField>