force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Manual_Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manual_Review_Reason__c</fullName>
    <label>Manual Review Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>