force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Memorial_Gift__c.field-meta.xml
<CustomField>
    <fullName>Memorial_Gift__c</fullName>
    <label>Memorial Gift</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Memorial_Gift</valueSetName>
    </valueSet>
</CustomField>