force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Non_Charitable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Non_Charitable_Amount__c</fullName>
    <label>Non Charitable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>