force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Pledge_No__c.field-meta.xml
<CustomField>
    <fullName>Pledge_No__c</fullName>
    <externalId>true</externalId>
    <label>Pledge No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>