force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Solicitation__c.field-meta.xml
<CustomField>
    <fullName>Solicitation__c</fullName>
    <description>CA: 9/20/2019: - Added for ISUF</description>
    <label>Solicitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Solicitation</valueSetName>
    </valueSet>
</CustomField>