force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>[CA:9/17/2019] Added for use by review transaction handler</description>
    <label>Source</label>
    <length>225</length>
    <type>Text</type>
</CustomField>