force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Special_Will_Types__c.field-meta.xml
<CustomField>
    <fullName>Special_Will_Types__c</fullName>
    <label>Special Will Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Special_Will_Types</valueSetName>
    </valueSet>
</CustomField>