force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/State_1__c.field-meta.xml
<CustomField>
    <fullName>State_1__c</fullName>
    <label>State 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>