force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/Total_Installments__c.field-meta.xml
<CustomField>
    <fullName>Total_Installments__c</fullName>
    <label>Total Installments</label>
    <length>4</length>
    <type>Text</type>
</CustomField>