force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Account_Suffix__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account_Suffix__c</fullName>
    <label>Account Suffix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>