force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Account_Suffix_Last_4_CC_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account_Suffix_Last_4_CC_Number__c</fullName>
    <label>Account Suffix (Last 4 CC Number)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>