force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Advantage_External_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Advantage_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Advantage External ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>