force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Amount_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_1__c</fullName>
    <label>Amount 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>