force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Appeal_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Appeal_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The first Appeal Code that appears on a transaction.  In some cases (or for future development), there could be multiple Appeal Codes associated with a Review Transaction.</description>
    <label>Appeal Code</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Review Transactions</relationshipLabel>
    <relationshipName>Review_Transactions_Appeal_Code</relationshipName>
    <type>Lookup</type>
</CustomField>