force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Approval_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Approval_Date_Formula__c</fullName>
    <formula>ucinn_ascendv2__Session__r.ucinn_ascendv2__Session_Totals_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>