force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Batch_ID__c</fullName>
    <label>Batch ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>