force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Deduction__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Deduction__c</fullName>
    <label>Deduction</label>
    <length>80</length>
    <type>Text</type>
</CustomField>