force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Deduction_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Deduction_Code__c</fullName>
    <label>Deduction Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>