force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Deduction_Dollar_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Deduction_Dollar_Amount__c</fullName>
    <label>Deduction Dollar Amount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>