force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Delete_Attachment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Delete_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to delete Image associated with the Review Transaction</description>
    <label>Delete Attachment</label>
    <type>Checkbox</type>
</CustomField>