force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Department_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Department_Code__c</fullName>
    <label>Department Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>