force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Designation_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The first Designation that appears on a transaction.  In some cases (or for future development), there could be multiple designations associated with a Review Transaction.</description>
    <label>Designation 1</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Review Transactions (Designation 1)</relationshipLabel>
    <relationshipName>Review_Transactions_Designation_1</relationshipName>
    <type>Lookup</type>
</CustomField>