force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Designation_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation 2</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Review Transactions (Designation 2)</relationshipLabel>
    <relationshipName>Review_Transactions_Designation_2</relationshipName>
    <type>Lookup</type>
</CustomField>