force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Designation_2_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_2_Name__c</fullName>
    <label>Designation 2 Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>