force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Designation_3__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Designation_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Designation 3</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Review Transactions (Designation 3)</relationshipLabel>
    <relationshipName>Review_Transactions_Designation_3</relationshipName>
    <type>Lookup</type>
</CustomField>