force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Donor_ID_From_Source__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Donor_ID_From_Source__c</fullName>
    <label>Donor ID From Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>