force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Drive_Year__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Drive_Year__c</fullName>
    <label>Drive Year</label>
    <length>30</length>
    <type>Text</type>
</CustomField>