force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Has_Tribute__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Has_Tribute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Tribute</label>
    <type>Checkbox</type>
</CustomField>