force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__In_Memory_Honor_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__In_Memory_Honor_Address_Line_1__c</fullName>
    <label>In Memory Honor Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>