force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__In_Memory_Honor_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__In_Memory_Honor_First_Name__c</fullName>
    <label>In Memory Honor First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>