force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__In_Memory_Honor_Personalized_Note__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__In_Memory_Honor_Personalized_Note__c</fullName>
    <label>In Memory Honor Personalized Note</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>