force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__In_Memory_Honor_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__In_Memory_Honor_Postal_Code__c</fullName>
    <label>In Memory Honor Postal Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>