force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__In_Memory_Honor_State__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__In_Memory_Honor_State__c</fullName>
    <label>In Memory Honor State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>