force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Installment_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Installment_Amount_2__c</fullName>
    <label>Installment Amount 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>