force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Is_Designation_3_Valid__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Designation_3_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Designation 3 Valid</label>
    <type>Checkbox</type>
</CustomField>