force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Is_Payment_Match__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Payment_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Payment Match</label>
    <type>Checkbox</type>
</CustomField>