force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Is_Ready_to_Post__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Ready_to_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ready to Post</label>
    <type>Checkbox</type>
</CustomField>