force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Manual_Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Manual_Review_Reason__c</fullName>
    <description>If populated, denotes that the transaction should be reviewed manually before processing.</description>
    <inlineHelpText>If populated, denotes that the transaction should be reviewed manually before processing.</inlineHelpText>
    <label>Manual Review Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>