force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Merchant_Defined_Data_Field_5__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Merchant_Defined_Data_Field_5__c</fullName>
    <label>Merchant Defined Data Field 5</label>
    <length>80</length>
    <type>Text</type>
</CustomField>