force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__MICR_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__MICR_Check_Number__c</fullName>
    <label>MICR Check Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>