force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Notify_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Notify_Last_Name__c</fullName>
    <label>Notify Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>