force-app/main/default/objects/ucinn_ascendv2__Review_Transaction__c/fields/ucinn_ascendv2__Notify_Person__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Notify_Person__c</fullName>
    <label>Notify Person</label>
    <length>80</length>
    <type>Text</type>
</CustomField>